--- a/admin_panel.html
+++ b/admin_panel.html
@@ -265,7 +265,7 @@
                             <small class="text-muted">Dernière localisation connue :
                                 <code>/archives/ultra_secret/top_confidentiel/ne_pas_regarder_ici/vraiment_pas/manuel_cafe_divin.html</code></small>
                             <br>
-                            <a href="manuel_cafe_divin.html" class="btn btn-sm btn-outline-success mt-2">Tenter
+                            <a href="archives/ultra_secret/top_confidentiel/ne_pas_regarder_ici/vraiment_pas/manuel_cafe_divin.html" class="btn btn-sm btn-outline-success mt-2">Tenter
                                 d'accéder au Saint Graal (Manuel du Café)</a>
                         </li>
                         <li class="list-group-item">Liste des blagues du CEO (Non approuvées par le service humour)</li>
