--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="#promos">Promos de Folie !</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#blog-en-pause">Le Blog (en pause technique depuis 2019)</a>
+                        <a class="nav-link" href="blog.html">Le Blog (en pause technique depuis 2019)</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contactez-nous (on répondra... un jour)</a>
@@ -101,7 +101,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="img/jardin.jpg" class="d-block w-100" alt="Technologie de Pointe">
+                                <img src="img/jardin.png" class="d-block w-100" alt="Technologie de Pointe">
                                 <div class="carousel-caption d-none d-md-block pb-5">
                                     <h1>NOS CAMÉRAS VOIENT TOUT ! (Même ce que vous préférez cacher)</h1>
                                     <p>Une qualité d'image époustouflante... en conditions optimales... parfois.</p>
@@ -109,7 +109,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="img/alarme.jpg" class="d-block w-100" alt="Alarmes Performantes">
+                                <img src="img/alarme.png" class="d-block w-100" alt="Alarmes Performantes">
                                 <div class="carousel-caption d-none d-md-block pb-5">
                                     <h1>DES ALARMES QUI RÉVEILLENT TOUT LE QUARTIER ! (Vos voisins vous remercieront...
                                         ou pas)</h1>
@@ -147,32 +147,32 @@
                                         </h5>
                                         <p class="card-text small">Vois tout, comprend parfois. Idéal pour surveiller si
                                             le chat mange bien ses croquettes.</p>
-                                        <a href="#" class="btn btn-outline-primary btn-sm">Découvrir la gamme</a>
+                                        <a href="produits/produit_cameras_hyper_intelligentes.html" class="btn btn-outline-primary btn-sm">Découvrir la gamme</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-4 mb-4">
                                 <div class="card product-card-custom h-100 shadow-sm">
-                                    <img src="img/alarmeFils.jpg" class="card-img-top p-3" alt="Alarmes Ultra-Soniques">
+                                    <img src="img/alarmeFils.png" class="card-img-top p-3" alt="Alarmes Ultra-Soniques">
                                     <div class="card-body text-center">
                                         <h5 class="card-title">Alarmes Ultra-Soniques (font fuir les moustiques aussi)
                                         </h5>
                                         <p class="card-text small">Protège votr maison contre les intrus (et les
                                             écureuils trop curieux). Décibels garantis !</p>
-                                        <a href="#" class="btn btn-outline-primary btn-sm">Voir les modèles</a>
+                                        <a href="produits/produit_alarmes_ultrasoniques.html" class="btn btn-outline-primary btn-sm">Voir les modèles</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-4 mb-4">
                                 <div class="card product-card-custom h-100 shadow-sm">
-                                    <img src="img/clavier.jpg" class="card-img-top p-3"
+                                    <img src="img/clavier.png" class="card-img-top p-3"
                                         alt="Contrôle d'Accès 'Forteresse'">
                                     <div class="card-body text-center">
                                         <h5 class="card-title">Contrôle d'Accès 'Forteresse' (si vous trouvez la clé)
                                         </h5>
                                         <p class="card-text small">Nul ne passera ! Sauf si vous oubliez le code. Ou si
                                             la batterie est à plat.</p>
-                                        <a href="#" class="btn btn-outline-primary btn-sm">Explorer les solutions</a>
+                                        <a href="produits/produit_controle_acces_forteresse.html" class="btn btn-outline-primary btn-sm">Explorer les solutions</a>
                                     </div>
                                 </div>
                             </div>
@@ -200,7 +200,7 @@
                                         <p class="mb-1"><span class="old-price">199,99€</span> <span
                                                 class="new-price">49,97€</span></p>
                                         <p class="small text-danger fw-bold">ÉCONOMISEZ 75% (Ouais, carrément!)</p>
-                                        <a href="#" class="btn btn-warning btn-sm mt-auto">AJOUTER AU PANIER (VITE!)</a>
+                                        <a href="produits/produit_oeil_de_taupe.html" class="btn btn-warning btn-sm mt-auto">AJOUTER AU PANIER (VITE!)</a>
                                     </div>
                                 </div>
                             </div>
@@ -218,7 +218,7 @@
                                         <p class="mb-1"><span class="old-price">250,00€</span> <span
                                                 class="new-price">79,99€</span></p>
                                         <p class="small text-success fw-bold">Super Affaire du Siècle!</p>
-                                        <a href="#" class="btn btn-danger btn-sm mt-auto">JE LE VEUX ABSOLUMENT!</a>
+                                        <a href="produits/produit_cri_du_cochon.html" class="btn btn-danger btn-sm mt-auto">JE LE VEUX ABSOLUMENT!</a>
                                     </div>
                                 </div>
                             </div>
@@ -235,7 +235,7 @@
                                         </div>
                                         <p class="mb-1"><span class="new-price">29,95€</span> (Pas cher, hein?)</p>
                                         <p class="small text-primary fw-bold">Stock (très) limité!</p>
-                                        <a href="#" class="btn btn-info btn-sm mt-auto text-white">ACHETER
+                                        <a href="produits/produit_detecteur_paranormal.html" class="btn btn-info btn-sm mt-auto text-white">ACHETER
                                             MAINTENANT!</a>
                                     </div>
                                 </div>
@@ -254,7 +254,7 @@
                                         <p class="mb-1"><span class="old-price">500,00€</span> <span
                                                 class="new-price">149,90€</span></p>
                                         <p class="small text-warning fw-bold">Offre à ne PAS manquer (sérieux)!</p>
-                                        <a href="#" class="btn btn-primary btn-sm mt-auto">PRENDRE MON KIT!</a>
+                                        <a href="produits/produit_kit_bunker.html" class="btn btn-primary btn-sm mt-auto">PRENDRE MON KIT!</a>
                                     </div>
                                 </div>
                             </div>
