--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="img/jardin.png" class="d-block w-100" alt="Technologie de Pointe">
+                                <img src="img/jardin.jpg" class="d-block w-100" alt="Technologie de Pointe">
                                 <div class="carousel-caption d-none d-md-block pb-5">
                                     <h1>NOS CAMÉRAS VOIENT TOUT ! (Même ce que vous préférez cacher)</h1>
                                     <p>Une qualité d'image époustouflante... en conditions optimales... parfois.</p>
@@ -109,7 +109,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="img/alarme.png" class="d-block w-100" alt="Alarmes Performantes">
+                                <img src="img/alarme.jpg" class="d-block w-100" alt="Alarmes Performantes">
                                 <div class="carousel-caption d-none d-md-block pb-5">
                                     <h1>DES ALARMES QUI RÉVEILLENT TOUT LE QUARTIER ! (Vos voisins vous remercieront...
                                         ou pas)</h1>
